--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ZDamager</title>
-	<link rel="stylesheet" href="styles/style.css">
+	<title>ZDamager Tool</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+	<style>
+		/* Center align elements */
+		body {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+		}
+		p {
+			font-size: 18px;
+			font-weight: 500;
+		}
+
+		.container {
+			text-align: center;
+		}
+	</style>
 </head>
+
 <body>
+	<div class="container">
+		<h1>ZDamager Tool Overview</h1>
+		<p>ZDamager tool repacks your zip, obb, scs files for prevent extraction or unpacking.</p>
 
-	<h1>Hello ZDamager</h1>
+		<div id="feildContainer" class="my-2 d-block">
+			<div>
+				<input class="form-control" type="file" id="inputFile">
+			</div>
+			<div class="fw-semibold my-2">
+				<span id="fileSize">0 MB</span>
+			</div>
+		</div>
 
+		<div id="progressBar" class="my-2 d-none">
+
+			<div class="progress">
+				<div id="progressValue" class="progress-bar" role="progressbar" aria-label="files ready state"
+					style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+			</div>
+
+		</div>
+
+		<div>
+			<button type="button" class="btn btn-primary" id="lockBtn" disabled>Lock File</button>
+		</div>
+	</div>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 	<script src="javascript/zip-damager.js"></script>
 </body>
+
 </html>
