refactor: :art: support to module type and add event listener for lock button and called damageAchive function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-	<div class="container">
+	<section class="container">
 		<h1>ZDamager Tool Overview</h1>
 		<p>ZDamager tool repacks your zip, obb, scs files for prevent extraction or unpacking.</p>
 
@@ -50,10 +50,10 @@
 		<div>
 			<button type="button" class="btn btn-primary" id="lockBtn" disabled>Lock File</button>
 		</div>
-	</div>
+	</section>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="javascript/zip-damager.js"></script>
+	<script type="module" src="javascript/zip-damager.js"></script>
 </body>
 
 </html>
