--- a/index.html
+++ b/index.html
@@ -29,22 +29,13 @@
 		<h1>ZDamager Tool Overview</h1>
 		<p>ZDamager tool repacks your zip, obb, scs files for prevent extraction or unpacking.</p>
 
-		<div id="feildContainer" class="my-2 d-block">
+		<div class="my-2 d-block">
 			<div>
 				<input class="form-control" type="file" id="inputFile">
 			</div>
 			<div class="fw-semibold my-2">
 				<span id="fileSize">0 MB</span>
 			</div>
-		</div>
-
-		<div id="progressBar" class="my-2 d-none">
-
-			<div class="progress">
-				<div id="progressValue" class="progress-bar" role="progressbar" aria-label="files ready state"
-					style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-			</div>
-
 		</div>
 
 		<div>
