--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 		<div class="my-2 d-block">
 			<div>
-				<input class="form-control" type="file" id="inputFile">
+				<input class="form-control" type="file" id="inputFile" accept=".zip,.obb,.scs">
 			</div>
 			<div class="fw-semibold my-2">
 				<span id="fileSize">0 MB</span>
