style: :lipstick: UI properly loading anim implemented

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
 				<span id="loadingVal"></span>
 			  </button>
-			<button type="button" class="btn btn-primary d-block mx-auto" id="lockBtn" disabled>Lock File</button>
+			<button type="button" class="btn btn-primary d-block mx-auto" id="lockBtn" disabled>Damage File</button>
 		</div>
 	</section>
 
