--- a/index.html
+++ b/index.html
@@ -3,29 +3,10 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>ZDamager Tool</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-	<style>
-		/* Center align elements */
-		body {
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			height: 100vh;
-		}
-
-		.form-select:focus,.form-control{
-			box-shadow: none !important;
-		}
-		p {
-			font-size: 18px;
-			font-weight: 500;
-		}
-
-		.container {
-			text-align: center;
-		}
-	</style>
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -35,7 +16,7 @@
 
 		<div class="my-2 d-block">
 
-			<div class="d-flex justify-content-center gap-3">
+			<div class="d-flex flex-column flex-md-row justify-content-center gap-3">
 				<!-- file input field -->
 				<div>
 					<input class="form-control" type="file" id="inputFile" accept=".zip,.obb,.scs">
@@ -43,9 +24,9 @@
 				<!-- select file type -->
 				<div>
 					<select id="fileType" class="form-select">
-						<option selected value="zip">zip</option>
-						<option value="obb">obb</option>
-						<option value="scs">scs</option>
+						<option value="zip" disabled>zip</option>
+						<option selected value="obb">obb</option>
+						<option value="scs" disabled>scs</option>
 					</select>
 				</div>
 			</div>
