chore: :recycle: setup for vercel hosting

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 			<button class="btn btn-primary d-none mx-auto" id="loadingBtn" type="button" disabled>
 				<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
 				<span id="loadingVal"></span>
-			  </button>
+			</button>
 			<button type="button" class="btn btn-primary d-block mx-auto" id="lockBtn" disabled>Damage File</button>
 		</div>
 	</section>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-	<script type="module" src="javascript/zip-damager.js"></script>
+	<script type="module" src="javascript/script.js"></script>
 </body>
 
 </html>
