--- a/index.html
+++ b/index.html
@@ -1,15 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>ZDamager</title>
-	<link rel="stylesheet" href="styles/style.css">
+	<title>ZDamager Tool</title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
+	<section class="container">
+		<h1>ZDamager Tool Overview</h1>
+		<p>ZDamager tool repacks your zip, obb, scs files for prevent extraction or unpacking.</p>
 
-	<h1>Hello ZDamager</h1>
+		<div class="my-2 d-block">
 
-	<script src="javascript/zip-damager.js"></script>
+			<div class="d-flex flex-column flex-md-row justify-content-center gap-3">
+				<!-- file input field -->
+				<div>
+					<input class="form-control" type="file" id="inputFile" accept=".zip,.obb,.scs">
+				</div>
+				<!-- select file type -->
+				<div>
+					<select id="fileType" class="form-select">
+						<option value="zip" disabled>zip</option>
+						<option selected value="obb">obb</option>
+						<option value="scs" disabled>scs</option>
+					</select>
+				</div>
+			</div>
+			<!-- file size element -->
+			<div class="fw-semibold my-2">
+				<span id="fileSize">0 MB</span>
+			</div>
+		</div>
+
+		<div>
+			<button class="btn btn-primary d-none mx-auto" id="loadingBtn" type="button" disabled>
+				<span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+				<span id="loadingVal"></span>
+			</button>
+			<button type="button" class="btn btn-primary d-block mx-auto" id="lockBtn" disabled>Damage File</button>
+		</div>
+	</section>
+
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+	<script type="module" src="javascript/script.js"></script>
 </body>
+
 </html>
